erDiagram
    users ||--o{ ledger_accounts : "owns several accounts"
    ledger_accounts ||--o{ ledger_entries : "records many entries"
    ledger_transactions ||--|{ ledger_entries : "holds 2 or more entries summing to zero"
    orders ||--o{ escrows : "splits into"
    orders ||--o{ payments : "is paid by"
    users ||--o{ withdrawals : "requests"

    users {
        int id PK
        varchar email UK
        enum role
        decimal balance "TO BE DROPPED — second source of truth"
    }

    ledger_accounts {
        bigint id PK
        enum owner_type "user | platform | external"
        bigint owner_id FK
        enum purpose "available | escrow_hold | withdrawal_pending | revenue | gateway_clearing | bank_external"
        bigint balance "dong as BIGINT, not decimal"
        int version
    }

    ledger_transactions {
        bigint id PK
        varchar type
        varchar idempotency_key UK "the guard against double processing"
        varchar reference_type "free string — Money does not depend on Ordering"
        bigint reference_id
        json metadata
    }

    ledger_entries {
        bigint id PK
        bigint transaction_id FK
        bigint account_id FK
        bigint amount "negative = out, positive = in"
        bigint balance_after
        timestamp created_at "APPEND-ONLY, never UPDATE or DELETE"
    }

    escrows {
        int id PK
        int order_id FK
        int buyer_id FK
        int seller_id FK
        bigint amount
        enum status "holding | released | refunded | cancelled"
    }

    payments {
        int id PK
        int order_id FK
        bigint amount
        varchar payos_order_code
        enum status
    }

    withdrawals {
        int id PK
        int user_id FK
        bigint amount
        varchar bank_account
        enum status "pending | approved | rejected | completed"
    }